welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: '=' expected but identifier found.
def void growFlower()
         ^FlowerPot:2: error: illegal start of simple expression
{
^